--- a/manifests.yaml
+++ b/manifests.yaml
@@ -18,6 +18,7 @@ spec:
       containers:
         - name: main
           image: nginx:latest
+          command: ['sh', '-c', 'sleep 30 && tail']
 ---
 apiVersion: v1
 kind: Service
